--- a/src/Components/OurTeam.module.css
+++ b/src/Components/OurTeam.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 115vh;
     background-color: #1f1f3b;
+    user-select: none;
 }
 
 @font-face {
@@ -163,4 +164,13 @@
     font-size: 16px;
     cursor: pointer;
     letter-spacing: 1px;
+}
+
+.btn1:hover {
+    background-color: #9369fdde;
+}
+
+.btn1:active {
+    background-color: #9369fd;
+    transition: 0.2s;
 }
