--- a/src/Components/OurWorks.module.css
+++ b/src/Components/OurWorks.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100vh;
     background-color: #1f1f3b;
+    user-select: none;
 }
 
 .title1 {
@@ -59,6 +60,17 @@
     cursor: pointer;
 }
 
+.hovers_1:hover {
+    background-color: rgba(255, 255, 255, 0.062);
+    border: 3px solid #ffffffc7;
+}
+
+.hovers_1:active {
+    background-color: rgba(255, 255, 255, 0);
+    border: 3px solid #ffffff;
+    transition: 0.2s;
+}
+
 .next {
     text-align: center;
     right: 0;
@@ -76,4 +88,12 @@
 .next img {
     width: 25px;
     height: 45px;
+}
+
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.5)
+}
+
+.next:active {
+    background-color: #000000;
 }
